# Cardano-Haskel-Donation-Platform

./: CHANGELOG.md  Haskel.cabal  Haskel.cabal backup  LICENSE  README.md  auditTrail.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AuditTrail.hs  CardanoTransactions.hs  Dashboard.hs  Donation.hs  DonationType.hs  Main.hs  SmartContract.hs  User.hs
